--- a/theme/cottyn/assets/css/_header.css
+++ b/theme/cottyn/assets/css/_header.css
@@ -256,7 +256,7 @@ nav.main-nav > ul > li > a{
     padding-bottom: 15px;
 }
 nav.main-nav > ul > li.current-menu-item a{
-    color: #4F7F35;
+    color: #0084A9;
 }
 
 
