--- a/theme/cottyn/assets/css/_vakgebieden-overzicht.css
+++ b/theme/cottyn/assets/css/_vakgebieden-overzicht.css
@@ -62,3 +62,110 @@
 .page-intro-des-cntlr{
     border-bottom: 1px solid #F3F3F3;
 }
+.Vakgebieden-search-box .input-field-col {
+    max-width: 820px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+
+.Vakgebieden-search-box .input-field-col input {
+    border: 1px solid #D7E4E9;
+    width: 100%;
+    height: 56px;
+    padding: 10px 21px;
+    color: #A1A1A3;
+    font-size: 14px;
+    padding-right: 45px;
+}
+.Vakgebieden-search-box .input-field-col label{
+    color: #2E3044;
+    font-size: 16px;
+}
+.Vakgebieden-search-box .input-field-col input:placeholder{
+    color:#A1A1A3;
+    opacity: 1;
+}
+.Vakgebieden-search-box .input-field-col input::-webkit-placeholder{
+    color:#A1A1A3;
+    opacity: 1;
+}
+.Vakgebieden-search-box .input-field-col input::-moz-placeholder{
+    color:#A1A1A3;
+    opacity: 1;
+}
+.Vakgebieden-search-box .input-field-col input:-ms-placeholder{
+    color:#A1A1A3;
+    opacity: 1;
+}
+.Vakgebieden-search-box .input-field-col input:-moz-placeholder{
+    color:#A1A1A3;
+    opacity: 1;
+}
+.Vakgebieden-search-box {
+    padding-top: 29px;
+    margin-bottom: 80px;
+}
+.Vakgebieden-grds-item a,.Vakgebieden-grds-item i {
+    display: inline-block;
+    border-radius: 100%;
+}
+.Vakgebieden-grds-item i:hover img{
+    transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+}
+
+.Vakgebieden-grds-item i {
+    background: #F3F8FA;
+    width: 160px;
+    height: 160px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.Vakgebieden-img {
+    text-align: center;
+    margin-bottom: 29px;
+}
+
+.Vakgebieden-grds ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+.Vakgebieden-grds ul li {
+    width: 25%;
+    margin-bottom: 55px;
+}
+
+.Vakgebieden-grds-item {
+    text-align: center;
+    padding-left: 18px;
+    padding-right: 18px;
+}
+.Vakgebieden-des h3,
+.Vakgebieden-des h3 a{
+    text-decoration: none;
+    line-height: 1.3;
+}
+.Vakgebieden-sec {
+    padding-bottom: 40px;
+}
+.Vakgebieden-search-box .input-field-col svg {
+    position: absolute;
+    right: 50%;
+    bottom: 50%;
+    transform: translate(50%,50%);
+}
+.Vakgebieden-search-box .input-field-col button {
+    position: absolute;
+    width: 50px;
+    height: 56px;
+    background: transparent;
+    right: 0;
+    bottom: 0;
+}
