--- a/theme/cottyn/assets/css/_vakgebieden-overzicht.css
+++ b/theme/cottyn/assets/css/_vakgebieden-overzicht.css
@@ -26,6 +26,7 @@
 }
 .page-banner-left{
 	width: 50%;
+    padding-right: 100px;
 }
 .page-banner-rgt {
     width: 50%;
@@ -41,6 +42,10 @@
 }
 .page-banner-title{
     margin-bottom: 0;
+    line-height: 1.4;
+}
+.page-banner-title span {
+    color: #0084A9;
 }
 .brdcrumb-blue-bg {
     background: #0084A9;
